# radium-test-case

./: .gitignore  Makefile  README.md  download.py  main.py  pyproject.toml  setup.cfg
.github/workflows/: code_check.yaml
case/: download.py  main.py
tests/: test_download.py  test_main.py
